# SM4_Machine

./: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
examples/: plain_text_1.txt
sm4_backend/: Cargo.toml  README.md
sm4_backend/src/: binding.rs  cbc_cts.rs  dec.rs  enc.rs  lib.rs  sm4.rs  utils.rs
sm4_server/: Cargo.toml  build.rs
sm4_server/public/: 0.index.js  index.html  index.js  main.css  sm4_backend_pkg_sm4_backend_bg_js.index.js
sm4_server/src/: main.rs
